# quest

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: rearc_analysis.ipynb
src/quest/: fetch.py  lambda_function.py  publish.py
terraform/: README.md  backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/modules/lambda/: main.tf  variables.tf
